wired up the module for test.js

--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ p {
 }
 
 .material-symbols-outlined {
-  background-image: url(./assets/timer_FILL0_wght500_GRAD0_opsz48.png);
+  /* background-image: url(./assets/timer_FILL0_wght500_GRAD0_opsz48.png); */
 }
 
 @font-face {
